<resources>
    <string name="app_name">cicada</string>
    <!-- 定义文件路径 -->
    <string name="CachePath">cicada</string>
    <string name="CachePathApk">/apk_path/</string>
    <string name="CachePathXml">/path_xml/</string>
    <string name="CachePathXmlPics">/path_xml/pics/</string>
    <string name="CachePathLoadingPics">/path_loading/pics/</string>
    <string name="CachePathGroupPic">/path_pic/</string>
    <string name="CachePathFile">/path_file/</string>
    <string name="CachePathFilePics">/path_file/pics/</string>
    <string name="CacheLogPath">/log_file/</string>
    <string name="CacheDownloadFile">/path_file/download/</string>
    <string name="CachePathVideo">/path_file/video/</string>
    <string name="CachePathAudio">/path_file/audio/</string>
    <string name="CacheSaveImage">/save_image</string>
    <string name="CachePathFileCache">/path_file/cache/</string>

    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="ok">好的</string>
    <string name="done">完成</string>
    <string name="choose_date_future">请选择正确的日期</string>
    <string name="know">知道啦</string>


    <!-- public -->
    <string name="app_exception_network_no">哎呀，网络连接出错啦</string>
    <string name="app_exception_connect_no">哎呀，网络连接出错啦</string>
    <string name="app_exception_server">服务太忙了，等会再来哟</string>
    <string name="app_exception_self">服务太忙了，等会再来哟</string>

    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>


    <!-- public dialog -->
    <string name="dialog_title_tip">提示</string>
    <string name="dialog_title_waiting">请稍后...</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="edit">编辑</string>
    <string name="copy">复制</string>
    <string name="save">保存</string>
    <string name="save_to_local">保存到手机</string>
    <string name="transmit">转发</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="allow">允许</string>
    <string name="refuse">拒绝</string>
    <string name="commit">提交</string>

    <!-- swipetoloadlauout -->
    <string name="pulltorefresh">下拉刷新</string>
    <string name="refreshing">刷新中...</string>
    <string name="releserefresh">释放刷新</string>
    <string name="refreshcomplete">刷新完成</string>
    <string name="pulltoloadmore">上拉加载更多</string>
    <string name="loadmoreing">加载中...</string>
    <string name="releseloadmore">释放加载</string>
    <string name="loadmorecomplete">加载完成</string>

    <string name="common_text_week_six">六</string>
    <string name="common_text_week_five">五</string>
    <string name="common_text_week_four">四</string>
    <string name="common_text_week_three">三</string>
    <string name="common_text_week_two">二</string>
    <string name="common_text_week_one">一</string>
    <string name="common_text_week_seven">日</string>


</resources>
